2004-07-10  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/check-usb-chip.c: Also check the number of interfaces for
	  the GT-6816 to avoid conflicts with other GT chips.

2004-07-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/brother.desc: New file. Added the
	  scanners listed on the brother backend page. Used "untested"
	  status as we don't have confirmation that the backend actually
	  works.
	* tools/hotplug/libsane.usermap: Added Mustek ScanExpress 1248UB.
	* tools/sane-desc.c: XML mode updates (patch from Jose Gato
	  <jgato@gsyc.escet.urjc.es>).
	* doc/descriptions/ma1509.desc: Removed dead link.

2004-07-05  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/descriptions/plustek.desc: Changed status of CanoScan D660U.
	* doc/plustek/Plustek-USB*: Update.
	* backend/plustek.c: Bumped up build number.
	* backend/plustek-usb.[ch] backend/plustek-usbdevs.c 
	  backend/plustek-usbhw.c backend/plustek-usbimg.c 
	  backend/plustek-usbmap.c backend/plustek-usbscan.c: Added support
	  for binary scanning for the CanoScan D660U, cleanup work.

2004-07-03  Peter Fales <peter@fales-lorenz.net>
	* acinclude.m4, aclocal.m4, configure, tools/sane-config.in: 
	  When using pkg-config to get library flags for gphoto2, any
	  extra flags (such as -L) must be passed to sane-config.in so
	  that it can find the libraries in a non-standard location.
	  (Bug #300686)

2004-07-02  Gerhard Jaeger <gerhard@gjaeger.de>
	* po/*.po: Updated according to changes in the plustek backend.
	* backend/plustek.c backend/plustek-usb*: Major update, see
	  doc/plustek/Plustek-USB.changes.
	* doc/sane-plustek.man: Update.
	* doc/plustek/Plustek-USB.changes: Update.
	* doc/descriptions/plustek.desc: Removed unsupported devices, 
	  updated some states.
	* doc/descriptions/plustek_pp.desc: URL update.
	* doc/descriptions/u12.desc: URL update, changed state of backend.
	* doc/sane-plustek_pp.man: URL update.
	* doc/sane-u12.man: URL update.
