@@ -1,3 +1,7 @@
+2004-07-10  Gerard Klaver <gerard at gkall dot hobby dot nl>
+
+	* tools/check-usb-chip.c: Added check for the GT-8911.
+
 2004-07-10  Henning Meier-Geinitz <henning@meier-geinitz.de>
 
 	* tools/check-usb-chip.c: Also check the number of interfaces for
